--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 .jumbotron {
-    height: 500px;
+    height: 400px;
     background-image: url("images/jumbotron2.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
     color: white;
+}
+
+.card {
+    border: none;
 }
