Add Pricing section

--- a/style.css
+++ b/style.css
@@ -12,3 +12,10 @@
     border: none;
     margin-bottom: 2rem;
 }
+
+.pricing-logo {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+    border-radius: 5px;
+}
