--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@
 #myBtn {
     display: none;
     position: fixed;
-    bottom: 20px;
+    bottom: 30px;
     right: 30px;
     z-index: 99;
+    background-color: lightgray;
   }
 
 .page-footer {
